# scc-compiler

./: .gitignore  README.md  flake.nix
src/: .gitignore  dune-project  scc.opam
src/_build/: log
src/lib/: dune  lexer.ml  lexer.mli  scc.ml  tokens.ml  tokens.mli
src/test/: dune
