(lang dune 3.18)

(name scc)

(generate_opam_files true)

(source
 (github saiputravu/scc-compiler))

(authors "Sai Putravu <unknown@unknown.com>" "Cyrus Knopf <unknown@unknown.com>" "Tom Cassar <unknown@unknown.com>")

(license LICENSE)

(documentation "None")

(package
 (name scc)
 (synopsis "The Sai-Cyrus-Cassar Compiler")
 (description "TODO: A longer description")
 (depends ocaml)
 (tags
  ())

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
